--- a/src/Home/Dashboard.css
+++ b/src/Home/Dashboard.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url("../asserts/images/background.jpg");
+  background-color: #fff;
   /* background-size: 60%; */
   background-size: cover;
 }
@@ -18,7 +18,7 @@ body{
   top: 0;
   background: transparent;
     box-shadow: none;
-    color: #fff;
+    color: #4b4b4b;
     display: inline-block;
     font-size: 15px;
     margin-left: 15px;
@@ -50,15 +50,19 @@ body{
 }
 
 .app-boards-add-board {
-  background-color: #fff;
+  background-color: #8ab36b;
   color: #000;
   border-radius: 10px;
   box-shadow: 1px 1px 0 1px rgba(0, 0, 0, 0.12);
   width: 100%;
   text-align: center;
 }
+
+.app-boards-add-board:hover{
+  background-color: #7d9f65;
+}
 .app-boards-add-board-edit {
-  background-color: #fff;
+  background-color: #8ab36b;
   border-radius: 10px;
   padding: 10px;
 }
