--- a/src/Home/Dashboard.css
+++ b/src/Home/Dashboard.css
@@ -92,3 +92,9 @@ body{
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(179, 174, 174, 0.5);
 }
+
+
+  .spinner{
+    width: 100%;
+    padding-left: 20px;
+  }
